// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Carousel component dots should works for dotPosition bottom 1`] = `
<div
  class="carousel"
>
  <div
    class="carousel-container"
    style="width: 100%; transition-duration: 0.5s; transform: translate3D(-0%, 0, 0);"
  >
    <div
      class="carousel-item carousel-item-active"
      style="width: 100%;"
    >
      <div />
    </div>
  </div>
  <div
    class="dots dots-bottom"
  >
    <button
      class="dots-item dots-item-active"
    >
      <div
        class="dots-item-span"
        style="width: auto; animation: progress-width 3000ms linear;"
      />
    </button>
  </div>
</div>
`;

exports[`Carousel component dots should works for dotPosition left 1`] = `
<div
  class="carousel"
>
  <div
    class="carousel-container"
    style="width: 100%; transition-duration: 0.5s; transform: translate3D(-0%, 0, 0);"
  >
    <div
      class="carousel-item carousel-item-active"
      style="width: 100%;"
    >
      <div />
    </div>
  </div>
  <div
    class="dots dots-left"
  >
    <button
      class="dots-item dots-item-active"
    >
      <div
        class="dots-item-span"
        style="height: auto; animation: progress-height 3000ms linear;"
      />
    </button>
  </div>
</div>
`;

exports[`Carousel component dots should works for dotPosition right 1`] = `
<div
  class="carousel"
>
  <div
    class="carousel-container"
    style="width: 100%; transition-duration: 0.5s; transform: translate3D(-0%, 0, 0);"
  >
    <div
      class="carousel-item carousel-item-active"
      style="width: 100%;"
    >
      <div />
    </div>
  </div>
  <div
    class="dots dots-right"
  >
    <button
      class="dots-item dots-item-active"
    >
      <div
        class="dots-item-span"
        style="height: auto; animation: progress-height 3000ms linear;"
      />
    </button>
  </div>
</div>
`;

exports[`Carousel component dots should works for dotPosition top 1`] = `
<div
  class="carousel"
>
  <div
    class="carousel-container"
    style="width: 100%; transition-duration: 0.5s; transform: translate3D(-0%, 0, 0);"
  >
    <div
      class="carousel-item carousel-item-active"
      style="width: 100%;"
    >
      <div />
    </div>
  </div>
  <div
    class="dots dots-top"
  >
    <button
      class="dots-item dots-item-active"
    >
      <div
        class="dots-item-span"
        style="width: auto; animation: progress-width 3000ms linear;"
      />
    </button>
  </div>
</div>
`;
